--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <head>
-<style>
-    path {
-  fill: none;
-  stroke: #666;
-  stroke-width: 2px;
-}
-</style>
-<meta charset="utf-8">
-<title>Million Song Dataset</title>
+    <link rel="stylesheet" href="styles.css">
+    <meta charset="utf-8">
+    <title>Million Song Dataset</title>
 </head>
     <!-- Add a search bar/dropdown to select artist -->
+
+    <div class="slider-container">
+        <div class="slider-text">Number of similar artists</div>
+        <div>
+            <input type="range" min="1" max="25" value="5" class="slider" id="similar_count_slider">
+            <span class="slider-label slider-min">1</span>
+            <span class="slider-label slider-max">25</span>
+        </div>
+    </div>
+
 <body>
 <script type="text/javascript" src="../lib/d3.v5.min.js"></script>
 <script type="text/javascript" src="main.js"></script>
