add tooltip + update csv

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="//rawgithub.com/Caged/d3-tip/master/examples/example-styles.css">
     <meta charset="utf-8">
     <title>Million Song Dataset</title>
 </head>
@@ -17,6 +18,7 @@
 
 <body>
 <script type="text/javascript" src="../lib/d3.v5.min.js"></script>
+<script type="text/javascript" src="../lib/d3-tip.min.js"></script>
 <script type="text/javascript" src="main.js"></script>
 </body>
 </html>
