Search artist done

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Million Song Dataset</title>
 </head>
     <!-- Add a search bar/dropdown to select artist -->
+    
+    <label>Search an artist:</label>
+        <select class="select_artists" id="artists"></select>
+        <button id = "search">Search</button>
+    
+    <br><br>
 
     <div class="slider-container">
         <div class="slider-text">Number of similar artists</div>
