Display Top artists Done

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <button id = "search">Search</button>
     
     <br><br>
+    <div id="top_artists">Select from any of the top artists:
+        <br><br>
+    </div>
+    <br><br>
 
     <div class="slider-container">
         <div class="slider-text">Number of similar artists</div>
